# docker-python-base

./: .flake8  .gitignore  .isort.cfg  .mypy.ini  CODEOWNERS  Dockerfile  README.md  dev.sh  docker-compose.generate_requirements.yml  entrypoint.sh  generate_requirements.sh  removed-packages.txt  requirements.txt  requirements_3.10.txt  requirements_3.8.txt  requirements_3.9.txt  test.sh  test_suite.sh
.github/: dependabot.yml  pr-title-checker-config.json
.github/workflows/: docker_image.yml  pr-title-checker.yml
tests/: .flake8  Dockerfile  build_webapp.sh  config.sh  pyproject.toml
tests/webapp/: main.py
tests/webapp/tests/: dsadsad.py  new_test.py  simple_test.py
