[tool.poetry]
name = "docker-python-base"
version = "202206"
description = "A library to facilitate base for Satel webapp's python backend"
authors = ["Anthony Hillairet <ant@satel.ca>"]
maintainers = ["Anthony Hillairet <ant@satel.ca>", "Rahul Patidar <rahul@satel.ca>"]
license = "MIT"
readme = "README.md"
exclude = []
classifiers = [ "License :: OSI Approved :: MIT License",]
homepage = "https://satelcreative.github.io/docker-python-base"
repository = "https://github.com/SatelCreative/docker-python-base"



[tool.poetry.dependencies]
anyio = "3.5.0"
argh = "0.26.2"
asgiref ="3.5.1"
attrs = "21.4.0"
click = "8.1.3"
colorama = "0.4.4"
coverage = "6.3.2"
fastapi = "0.75.2"
h11 = "0.13.0"
idna = "3.3"
iniconfig= "1.1.1"
isort = "5.10.1"
loguru = "0.6.0"
mccabe = "0.6.1"
nest-asyncio  = "1.5.5"
packaging = "21.3"
pathspec = "0.9.0"
platformdirs = "2.5.2"
pluggy = "1.0.0"
py = "1.11.0"
pycodestyle = "2.8.0"
pydantic = "1.9.0"
pyflakes = "2.4.0"
pyparsing = "3.0.8"
python = "^3.10"
PyYAML = "6.0"
sniffio = "1.2.0"
starlette = "0.17.1"
tabulate = "0.8.9"
testfixtures = "6.18.5"
toml = "0.10.2"
tomli = "2.0.1"
typing_extensions = "4.2.0"
uvicorn = "0.17.6"
watchdog = "2.1.7"


[tool.poetry.dev-dependencies]
black= "22.3.0"
flake8 = "4.0.1"
flake8-isort = "4.1.1"
flake8-print= "5.0.0"
flake8-quotes = "3.3.1"
mypy = "0.950"
mypy-extensions = "0.4.3"
interrogate = "1.5.0"
pytest= "7.1.2"
pytest-asyncio= "0.18.3"
pytest-cov= "3.0.0"
pytest-mock= "3.7.0"




[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.mypy]
plugins = "pydantic.mypy"
show_error_codes = true

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = true
fail-under = 95