[tool.poetry]
name = "docker-python-base"
version = "202206"
description = "A library to facilitate base for Satel webapp's python backend"
authors = ["Anthony Hillairet <ant@satel.ca>"]
maintainers = ["Anthony Hillairet <ant@satel.ca>", "Rahul Patidar <rahul@satel.ca>"]
license = "MIT"
readme = "README.md"
exclude = []
classifiers = [ "License :: OSI Approved :: MIT License",]
homepage = "https://satelcreative.github.io/docker-python-base"
repository = "https://github.com/SatelCreative/docker-python-base"



[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.75.2"
loguru = "0.6.0"
uvicorn = "^0.18.2"
requests = "^2.28.1"


[tool.poetry.dev-dependencies]
watchdog = "^2.1.9"
PyYAML = "^6.0"
argh = "^0.26.2"
mypy = "^0.961"
mypy-extensions = "^0.4.3"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
pytest-asyncio = "^0.18.3"
flake8 = "^4.0.1"
isort = "^5.10.1"
flake8-isort = "^4.1.1"
flake8-quotes = "^3.3.1"
flake8-print = "^5.0.0"
black = "^22.6.0"
interrogate = "^1.5.0"


[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.mypy]
plugins = "pydantic.mypy"
show_error_codes = true

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = true
fail-under = 95
